--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,53 @@
 :root {
-  --primary-color: #FFFFFF;
-  --primary-variant-color: #eee;
-  --accent-color: #000;
-  --font-color: #121212;
-  --button-text-color: #FFFFFF;
+  --primary-color: #FEFEFE;
+  --primary-variant-color: #EDEDED;
+  --footer-color: #B8B8B8;
+  --accent-color: #D9D9D9;
+  --text-color: #000;
+  --text-variant-color: #454545;
+  --button-text-color: #575757;
 }
 
 [data-theme="dark"] {
-  --primary-color: #0F0F0F;
-  --primary-variant-color: #212123;
-  --accent-color: #FFFFFF;
-  --font-color: #FFFFFF;
-  --button-text-color: #121212;
+  --primary-color: #1A1C20;
+  --primary-variant-color: #0E0F12;
+  --footer-color: #181819;
+  --accent-color: #383838;
+  --text-color: #FFFFFF;
+  --text-variant-color: #DFDFDF;
+  --button-text-color: #FFFFFF;
 }
 
 html, body {
   padding: 0;
   margin: 0;
-  font-family: sans-serif;
-  color: var(--font-color);
+  font-family: 'Inter', sans-serif;
+  color: var(--text-color);
   height: 100%;
   background-color: var(--primary-color);
 }
 
 h6 {
-  font-size: 18px;
+  font-size: 20px;
+  color: #575757;
+  font-weight: normal;
 }
 
 h2 {
   font-size: 64px;
   margin: 50px 0;
+  font-weight: normal;
 }
 
 h4 {
   font-size: 30px;
   margin: 30px 0;
+  font-weight: normal;
 }
 
 p {
-  font-size: 16px;
-}
-
-img {
-  width: 500px;
+  font-size: 18px;
+  color: var(--text-variant-color);
 }
 
 .menu {
@@ -57,7 +62,7 @@ img {
 }
 
 .first-section {
-  background-color: var(--primary-variant-color);
+  background-color: var(--primary-color);
   height: 80vh;
   min-height: 650px;
   width: 100%;
@@ -72,8 +77,8 @@ img {
 }
 
 .second-section {
-  background-color: var(--primary-color);
-  height: 60vh;
+  background-color: var(--primary-variant-color);
+  height: 70vh;
   display: flex;
   min-height: 650px;
   justify-content: center;
@@ -87,19 +92,35 @@ img {
 }
 
 .footer {
-  height: 80px;
-  background-color: var(--primary-variant-color);
+  height: 60px;
+  background-color: var(--footer-color);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.image-holder{
+  width: 500px;
+  height: 300px;
+  background-color: #FFFFFF;
+  border: none;
+  border-radius: 9px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.placeholder{
+  width: 132px;
+  height: 132px;
+}
+
 .dark-mode-toggle {
   width: 48px;
   height: 48px;
-  border: 1px solid var(--primary-variant-color);
+  border: 1px solid var(--accent-color);
   border-radius: 50%;
-  color: var(--font-color);
+  color: var(--button-text-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -113,9 +134,7 @@ button {
   color: var(--button-text-color);
   font-size: 13px;
   border: none;
-  border-radius: 4px;
   padding: 0;
-  font-weight: bold;
   margin: 20px 0;
 }
 
@@ -130,29 +149,20 @@ button {
 }
 
 .logo {
-  font-size: 36px;
-  font-weight: bold;
+  font-size: 20px;
+  font-weight: normal;
   margin-left: 50px;
+  color: #575757;
 }
 
 .topnav a {
-  color: var(--font-color);
+  color: #575757;
   text-align: center;
   padding: 14px 16px;
-  font-size: 15px;
-  font-weight: bold;
+  font-size: 20px;
   text-decoration: none;
   text-transform: capitalize;
-}
-
-.topnav a:hover {
-  color: var(--accent-color);
-}
-
-.topnav a.active {
-  border: 3px solid var(--accent-color);
-  color: var(--font-color);
-}
+} 
 
 @media only screen and (max-width: 800px) {
   .logo {
@@ -177,9 +187,9 @@ button {
     gap: 5px;
   }
 
-  img {
+  .image-holder {
     width: 100%;
-    padding: 0 30px;
+    margin: 0 30px;
   }
 
   .first-section p {
